--- a/src/index.less
+++ b/src/index.less
@@ -1,7 +1,7 @@
 @import "~antd/lib/style/themes/default.less";
 @import "~antd/dist/antd.less";
 
-@ant-prefix: tmm;
+//@ant-prefix: tmm;
 @primary-color: rgb(101, 140, 59); // primary color for all components
 @link-color: rgb(101, 140, 59); // link color
 @success-color: #52c41a; // success state color
